--- a/meta.html
+++ b/meta.html
@@ -2,4 +2,5 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "url": "http://www.mikeyapp.com"
-}</script>
+}
+</script><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/><link rel="icon" href="/favicon.ico" type="image/x-icon"/>
